	- Fixed a table formatting problem when a column has multiple colspan
	  values (PR #6709)
	- Fixed parsing of HTML comments (STR #181)
	- Fixed potential out-of-bounds read in table-of-contents rendering
	  code (STR #183)
        - Fixed handling of image URLs with ampersands in them (STR #186)
	- Fixed top/bottom margins for logo and header/footer images (STR #174)


CHANGES IN HTMLDOC v1.8.27

    BUG FIXES

	- Fixed a crash bug that appeared when more than 10 blank
	  pages were present in a document (PR #6223)
	- Color changes were not reflected in PRE text (STR #129)
	- Remote URLs did not always work on older operating
	  systems (PR #6179)
	- Image filenames using % escapes were not decoded
	  properly.
	- Rows using BGCOLOR that spanned across multiple pages
	  did not render properly (PR #6149)
	- Rows no longer start on a new page due to a cell with
	  both HEIGHT and ROWSPAN specified (PR #6086)
	- CMYK JPEG images caused HTMLDOC to crash (PR #6106)
	- Table cell width calculations didn't always account for
	  the proper minimum width (STR #121)
	- Images were not copied when generating indexed HTML
	  output to a directory (STR #117)
	- Changing the bottom margin resulted in text that was
	  formatted below the bottom margin.
	- The Monospace-Oblique font was not embedded properly in
	  PDF files.


CHANGES IN HTMLDOC v1.8.26

    BUG FIXES

	- Outline and keyword strings in PDF files are now stored
	  as Unicode (STR #113)
	- The Flate compression code could get in an infinite
	  loop if it ran out of memory (STR #101)
	- Book files saved from the GUI did not handle filenames
	  with spaces (STR #105)
	- Fixed and re-enabled the ASCII85Device filter support
	  in PostScript Level 2/3 output (STR #116)
	- Character entities in the first word of a file were not
	  rendered properly (STR #111)
	- Fixed-size table columns were incorrectly resized when
	  a table width was also specified and there was extra
	  space to distribute (PR #6062)