@@ -47,6 +47,8 @@
 	<LI>Fixed top/bottom margins for logo and header/footer images
 	(STR #174)</LI>
 
+	<li>Fixed image alignment bug (Bug #231)</li>
+
 </UL>
 
 
@@ -529,7 +531,7 @@
 	URLs.
 
 	<LI>HTMLDOC now defaults unknown colors to white for
-	background colors and black for foreground colors. 
+	background colors and black for foreground colors.
 	This should make documents that use non-standard color
 	names still appear readable.
 
@@ -923,7 +925,7 @@
 	colors when using Flate compression.  This makes PDF
 	files much smaller in general.</LI>
 	<LI>Changed the in-line image size limit to 64k.</LI>
-	<LI>Now allow "&lt;" followed by whitespace, "=", or "&lt;". 
+	<LI>Now allow "&lt;" followed by whitespace, "=", or "&lt;".
 	This violates the HTML specification, but we're sick
 	of people complaining about it.</LI>
 	<LI>Preferences are now stored in a user-specific file
